--- a/rollup/core/classes/RollupFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupFullRecalcProcessor.cls
@@ -9,7 +9,6 @@ public abstract without sharing class RollupFullRecalcProcessor extends RollupAs
 
   protected String queryString;
   private Boolean hasProcessedParentRecords = false;
-  private Boolean isRecursive = false;
 
   private static final Map<String, List<SObject>> QUERY_TO_CALC_ITEMS {
     get {
@@ -82,13 +81,9 @@ public abstract without sharing class RollupFullRecalcProcessor extends RollupAs
   }
 
   public override void storeParentResetField(RollupAsyncProcessor processor, SObject parent) {
-    if (this.isRecursive == false) {
-      this.isRecursive = true;
-      super.storeParentResetField(processor, parent);
-      this.postProcessor?.recordIds.add(parent.Id);
-      this.postProcessor?.storeParentResetField(processor, parent);
-    }
-    this.isRecursive = false;
+    this.addToPreviouslyResetParents(processor, parent);
+    this.postProcessor?.recordIds.add(parent.Id);
+    this.postProcessor?.addToPreviouslyResetParents(processor, parent);
   }
 
   public void storeParentFieldsToClear(List<SObject> parentRecordsToClear) {
