--- a/rollup/core/classes/RollupFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupFullRecalcProcessor.cls
@@ -36,6 +36,7 @@ public abstract without sharing class RollupFullRecalcProcessor extends RollupAs
     this.recordIds = recordIds;
     this.postProcessor = postProcessor;
     this.overrideRollupControl();
+    this.previouslyResetParents = new Set<String>();
   }
 
   public virtual Boolean isBatch() {
